# cellular-automaton

./: CMakeLists.txt  README.md
src/: Automaton.cpp  Automaton.h  CARule.h  CudaAutomaton.cu  CudaAutomaton.h  GLViewport.cpp  GLViewport.h  MainWindow.cpp  MainWindow.h  Types.h  main.cpp
